@@ -5,40 +5,30 @@ from kql.kqlmagic import KqlMagic
 
 ip = get_ipython()
 
-class SqlEnv(object):
+class KqlEnv(object):
     # Object constructor
     def __init__(self, connectstr):
         self.connectstr = connectstr
     def query(self, txt):
         return ip.run_line_magic('kql', "%s %s" % (self.connectstr, txt))
 
-sql_env = SqlEnv('kusto://')
+kql_env = KqlEnv('kusto://')
+
+basequery = "let manycoltbl = view () { datatable(name:string, y1:real, y2:real, name2:string, y3:real) ['r1-txt1', 1.01, 1.02, 'r1-txt2', 1.04, 'r2-txt1', 2.01, 2.02, 'r2-txt2', 2.04, 'r3-txt1', 3.01, 3.02, 'r3-txt2', 3.04] }; "
 
 def setup():
-    KqlMagic = KqlMagic(shell=ip)
-    ip.register_magics(KqlMagic)
-    creator = """
-        DROP TABLE IF EXISTS manycoltbl;
-        CREATE TABLE manycoltbl 
-                     (name TEXT, y1 REAL, y2 REAL, name2 TEXT, y3 INT);
-        INSERT INTO manycoltbl VALUES 
-                     ('r1-txt1', 1.01, 1.02, 'r1-txt2', 1.04);
-        INSERT INTO manycoltbl VALUES 
-                     ('r2-txt1', 2.01, 2.02, 'r2-txt2', 2.04);
-        INSERT INTO manycoltbl VALUES ('r3-txt1', 3.01, 3.02, 'r3-txt2', 3.04);
-        """
-    for qry in creator.split(";"):
-        sql_env.query(qry)
+    kqlMagic = KqlMagic(shell=ip)
+    ip.register_magics(kqlMagic)
 
 def teardown():
-    sql_env.query("DROP TABLE manycoltbl")
+    pass
 
 class Harness(object):
     def run_query(self):
-        return sql_env.query(self.query)
+        return kql_env.query(self.query)
 
 class TestOneNum(Harness):
-    query = "SELECT y1 FROM manycoltbl"
+    query = basequery + "manycoltbl | project y1"
     
     @with_setup(setup, teardown)
     def test_pie(self):
@@ -59,7 +49,7 @@ class TestOneNum(Harness):
         assert results.x.name == ''
 
 class TestOneStrOneNum(Harness):
-    query = "SELECT name, y1 FROM manycoltbl"
+    query = basequery + "manycoltbl | project name, y1"
     
     @with_setup(setup, teardown)
     def test_pie(self):
@@ -79,7 +69,7 @@ class TestOneStrOneNum(Harness):
 
 
 class TestTwoStrTwoNum(Harness):
-    query = "SELECT name2, y3, name, y1 FROM manycoltbl"
+    query = basequery + "manycoltbl | project name2, y3, name, y1"
     
     @with_setup(setup, teardown)
     def test_pie(self):
@@ -101,13 +91,15 @@ class TestTwoStrTwoNum(Harness):
 
 
 class TestTwoStrThreeNum(Harness):
-    query = "SELECT name, y1, name2, y2, y3 FROM manycoltbl"
+    query = basequery + "manycoltbl | project name, y1, name2, y2, y3"
     
     @with_setup(setup, teardown)
     def test_pie(self):
         results = self.run_query()
         results.guess_pie_columns(xlabel_sep="//")
         assert results.ys[0].is_quantity
+        print("1--- {}".format(results.ys))
+        print("2--- {}".format([[1.04, 2.04, 3.04]]))
         assert results.ys == [[1.04, 2.04, 3.04]]
         assert results.xlabels == ['r1-txt1//1.01//r1-txt2//1.02',
                                   'r2-txt1//2.01//r2-txt2//2.02',
@@ -116,6 +108,7 @@ class TestTwoStrThreeNum(Harness):
     @with_setup(setup, teardown)
     def test_plot(self):
         results = self.run_query()
+        
         results.guess_plot_columns()
         assert results.ys == [[1.02, 2.02, 3.02], [1.04, 2.04, 3.04]]
         assert results.x == [1.01, 2.01, 3.01]
